# web_notepad

./: .gitignore  build_log.txt  build_output.txt  package-lock.json  package.json  release.ps1  run-dev-signed.ps1  vite.config.js  wix.json
releases/v1.0.0/: LightPad_1.0.0_x64_en-US.msi
releases/v1.0.1/: LightPad_1.0.1_x64_en-US.msi
src/: csv.js  doc.js  editor-manager.js  editor.js  file-io.js  history.js  index.html  main.js  overlays.js  panes.js  quill-init.js  script.js  script_temp.js  session.js  state.js  status-bar.js  style.css  tabs-ui.js  tauri-bridge.js  todo.js  utils.js
src-tauri/: Cargo.toml  main.wxs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
